--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,10 @@
   Home page !
 
   <h2>Hi {{ name }}</h2>
-  <input type="text" [(ngModel)]="name" />
-
+  <input type="text" [(ngModel)]="age" />
+  <h4>Tuoi cua ban la {{ age }}</h4>
   <br />
-
-  <button (click)="resetName()">Reset Name</button>
+  <div *ngIf="age <= 18; then tre; else gia"></div>
+  <ng-template #tre><h2>Tre</h2></ng-template>
+  <ng-template #gia><h2>Gia</h2></ng-template>
 </div>
