--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,19 @@
 <div class="test">
   Home page !
 
-  <h2>Hi {{ name }}</h2>
-  <input type="text" [(ngModel)]="age" />
-  <h4>Tuoi cua ban la {{ age }}</h4>
-  <br />
-  <div *ngIf="age <= 18; then tre; else gia"></div>
-  <ng-template #tre><h2>Tre</h2></ng-template>
-  <ng-template #gia><h2>Gia</h2></ng-template>
+  <h2>Trai cay</h2>
+  <table class="table">
+    <tr>
+      <th></th>
+      <th>Name</th>
+      <th>Price</th>
+    </tr>
+    <tr *ngFor="let fruit of fruits; let i = index">
+      <td>{{ i + 1 }}</td>
+      <td>{{ fruit.name }}</td>
+      <td>
+        <span [ngClass]="{ red: fruit.price > 10 }">{{ fruit.price }}</span>
+      </td>
+    </tr>
+  </table>
 </div>
