--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,12 @@
-.test {
-  border: 1px solid #000;
-  padding: 20px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  display: inline-block;
+.table {
+  border-collapse: collapse;
+  td,
+  th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+}
+
+.red {
+  color: red;
 }
