--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,11 @@
     </tr>
     <tr *ngFor="let fruit of fruits; let i = index">
       <td>{{ i + 1 }}</td>
-      <td>{{ fruit.name }}</td>
+      <td>{{ fruit.name | uppercase }}</td>
       <td>
-        <span [ngClass]="{ red: fruit.price > 10 }">{{ fruit.price }}</span>
+        <span [ngClass]="{ red: fruit.price > 10 }">{{
+          fruit.price | currency: "VND"
+        }}</span>
       </td>
     </tr>
   </table>
