--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,12 +1,3 @@
-.table {
-  border-collapse: collapse;
-  td,
-  th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-}
-
-.red {
-  color: red;
+select {
+  width: 200px;
 }
