--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 <h1>Hello World</h1>
-<app-home></app-home>
+<h2>App page</h2>
+
+<nav>
+  <ul>
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/about">About</a></li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
