--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,10 @@
 <p>about works!</p>
-<div [ngSwitch]="loginName">
-  <div *ngSwitchCase="'user'">User id logged in ...</div>
-  <div *ngSwitchCase="'admin'">Admin id logged in ...</div>
-  <div *ngSwitchDefault>please choose loggin name</div>
+<h1>My First Attribute Directive</h1>
+
+<h2>Pick a highlight color</h2>
+<div>
+  <input type="radio" name="colors" (click)="color = 'lightgreen'" />Green
+  <input type="radio" name="colors" (click)="color = 'yellow'" />Yellow
+  <input type="radio" name="colors" (click)="color = 'cyan'" />Cyan
 </div>
+<p [appHighlight]="color">Highlight me!</p>
