--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,5 @@
 <p>about works!</p>
-<h1>My First Attribute Directive</h1>
-
-<h2>Pick a highlight color</h2>
-<div>
-  <input type="radio" name="colors" (click)="color = 'lightgreen'" />Green
-  <input type="radio" name="colors" (click)="color = 'yellow'" />Yellow
-  <input type="radio" name="colors" (click)="color = 'cyan'" />Cyan
-</div>
-<p [appHighlight]="color">Highlight me!</p>
+<br />
+<span>Counter = {{ counter }} </span>
+<br />
+<span>Counter! = {{ counterFactorial }} </span>
