--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <li><a routerLink="/home">Home</a></li>
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/template">Template</a></li>
+    <li><a routerLink="/reactiveForm">Reactive Form</a></li>
   </ul>
 </nav>
 
