--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/template">Template</a></li>
     <li><a routerLink="/reactiveForm">Reactive Form</a></li>
+    <li><a routerLink="/getData">Get Data</a></li>
   </ul>
 </nav>
 
