--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     <li><a routerLink="/template">Template</a></li>
     <li><a routerLink="/reactiveForm">Reactive Form</a></li>
     <li><a routerLink="/getData">Get Data</a></li>
+    <li><a routerLink="/postData">Post Data</a></li>
   </ul>
 </nav>
 
